[gd_scene load_steps=2 format=3 uid="uid://cveqhxji75y0m"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_bn3uy"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.86
script = ExtResource("1_bn3uy")

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
text = "Come√ßar"

[node name="Button2" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -30.0
offset_right = 150.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
text = "Options"

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -15.0
offset_right = 150.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
text = "Sair do Jogo"

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
